- Added 1080/720/576/480 format symbols into status window.

2009-10-01: Version 1.7.5

- Changed H.264 parser to show display aspect ratio.
- Removed error logging from unimplemented ioctl functions.
- Removed bitstream parsing from Receive() method.
- Added Chinese translation (Thanks to NanFeng).

2010-02-01: Version 1.7.6

- Updated for vdr-1.7.12.
- Updated Estonian translation (Thanks to Arthur Konovalov).
- Added Lithuanian translation (Thanks to Valdemaras Pipiras).

2010-03-05: Version 1.7.7

- Updated for vdr-1.7.13.
- Added a setup option to downscale the OSD size.
- Updated Estonian translation (Thanks to Arthur Konovalov).

2010-06-23: Version 1.7.8

- Fixed device switching.
- Added preliminary support for LATM.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a crash in femon service (Thanks to Wolfgang Astleitner).

2010-12-27: Version 1.7.9

- Updated for vdr-1.7.16.
- Added Makefile depencency for objects.
- Fixed detection of replaying.
- Added support for LDFLAGS.

2011-05-15: Version 1.7.10

- Updated for vdr-1.7.18.
- Added scaling for symbols.

2011-12-04: Version 1.7.11

- Updated for vdr-1.7.22: New API functions for signal strength
  and quality used to provide information for the OSD.
- Added cppcheck target into Makefile.
- Refactored bitstream code.

2012-01-15: Version 1.7.12

- Updated for vdr-1.7.23.
- Updated SVDRP interface.
- Added Hungarian translation (Thanks to Fuley Istvan).

2012-02-05: Version 1.7.13

- Added initial support for PVRINPUT devices (Thanks to Winfried Köhler).
- Added initial support for IPTV devices.

2012-03-10: Version 1.7.14

- Updated for vdr-1.7.26.

2012-03-12: Version 1.7.15

- Cleaned up compilation warnings.
- Fixed channel switching.

2012-03-25: Version 1.7.16

- Updated for vdr-1.7.27.
- Cleaned up compilation warnings again.

2012-xx-xx: Version 1.7.17

- Added the dynamite compatibility patch (Thanks to Lars Hanisch).
- Silenced error log messages when accessing pseudo devices.